opcao de mostrar todas as turmas (VISUALIZACAO TEMPORARIA)

--- a/assets/styles/pages/turmas.less
+++ b/assets/styles/pages/turmas.less
@@ -5,8 +5,8 @@
     border: 1px solid #0066cc;
     text-align: center;
     width: 180px;
+    display: inline-block;
     .card-header{
-      background-color: #0066cc;
       font-weight: bold;
     }
   }
@@ -14,5 +14,8 @@
     @media (max-width: 800px) {
       text-align: center;
     }
-
+  .active{
+     background-color: #ffffff;
+     color: black;
+  }
 }
