--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -1,17 +1,19 @@
 <div id="homepage" :class="[heroHeightSet ? '' : 'uninitialized']" v-cloak>
   <div class="hero d-flex flex-column justify-content-center" full-page-hero>
     <div class="container text-center">
-      <div class="hero-image">
+      <!-- <div class="hero-image">
+       <img class="sky" alt="The sky above the ocean" src="/images/hero-sky.png"/>
         <img class="sky" alt="The sky above the ocean" src="/images/hero-sky.png"/>
         <img class="cloud cloud-1" alt="A grayish-blue cloud" src="/images/hero-cloud.png"/>
         <img class="cloud cloud-2" alt="Another grayish-blue cloud" src="/images/hero-cloud.png"/>
         <img class="ship" alt="A ship hovering a few feet over the surface of the water, bearing a flagpole with the Sails.js logo" src="/images/hero-ship.png"/>
         <img class="water" alt="The shadow of the floating ship on the water" src="/images/hero-water.png"/>
-      </div>
-      <h1 class="display-4">A new <strong>Sails</strong> app.{{hello}}</h1>
+        <img class="water" alt="The shadow of the floating ship on the water" src="/images/logooasis.jpeg"/>
+      </div>-->
+      <h1 class="display-4">OASIS - Ambiente Colaborativo de Desenvolvimento e armazenamento de Jogos Educacionais</h1>
       <div>
         <div class="more-info-text" @click="clickHeroButton()">
-          <div class="text">Dive in</div>
+          <div class="text">Módulos Oasis</div>
           <div class="icon">&darr;</div>
         </div>
       </div>
@@ -20,8 +22,8 @@
   <div class="about-wrapper" role="scroll-destination">
     <div class="container">
       <div class="about text-center">
-        <h3>This is your freshly-generated project + a few extras.</h3>
-        <p>In our time <a target="_blank" href="https://sailsjs.com/studio">building apps for customers</a>, we've found ourselves re-rolling some of the same key features over and over again between projects.  So we picked some of the things that kept popping up, implemented our own opinionated solutions for them, and then included it all in this free and open-source starter app.  We hope it helps you as much as it helps us!</p>
+        <h3>O Oasis possue 3 principais módulos</h3>
+        <p>A arquitetura do OASIS é extensível e permite a comunicação com diversos módulo. Atualmente o OASIS contempla 3 módulos.</p>
       </div>
       <div class="features text-center">
         <div class="row">
@@ -29,29 +31,31 @@
             <div class="icon">
               <i class="fa fa-envelope"></i>
             </div>
-            <h4>Emails</h4>
-            <p class="text-muted">Built-in support for internal emails from the <a href="/contact">contact form</a>, as well as transactional emails for users.</p>
+            <h4>Editor SGDD-EDU</h4>
+            <p class="text-muted">Ambiente criado para criação de descrições de jogos eduacionais curtos seguindo a metodologia SGDD-EDU</p>
           </div>
           <div class="col-sm feature">
             <div class="icon">
               <i class="fa fa-lock"></i>
             </div>
-            <h4>Authentication</h4>
-            <p class="text-muted">Ready-to-go, customizable <a href="/signup">sign up</a>, <a href="/login">login</a>, and <a href="/password/forgot">password recovery</a> flows for your users.</p>
+            <h4>Ambiente Colaborativo de desenvolvimento de Jogos</h4>
+            <p class="text-muted">Ambiente responsável pela estrutura e divisão do trabalho necessário ao desenvolvimento dos jogos. Desenvolvedores, Artistas gráficos e Educadores se encontram aqui para divisão de tarefas.</p>
           </div>
           <div class="col-sm feature">
             <div class="icon">
               <i class="fa fa-credit-card"></i>
             </div>
-            <h4>Billing</h4>
-            <p class="text-muted">Hook up to your Stripe account for managing customers and payment sources.</p>
+            <h4>Repositório de Games Eduacionais</h4>
+            <p class="text-muted">O OASIS também é um repositório de objetos virtuais de aprendizagem no formato de jogos eletrônicos. </p>
           </div>
         </div>
-        <a class="btn btn-outline-info mt-5" href="/faq">Learn more</a>
+        <a class="btn btn-outline-info mt-5" href="/faq">Saiba mais...</a>
       </div>
     </div>
   </div>
-  <div class="container">
+
+
+  <!--<div class="container">
     <div class="setup">
       <h3 class="text-center">How to get started:</h3>
       <div class="step">
@@ -107,6 +111,6 @@ stripeSecret: 'sk_test_Zzd814nldl91104qor5911gjald'</code></pre>
       <p><span class="text-muted">&hearts;</span> <a href="https://sailsjs.com/about">The Sails Team</a></p>
       <p> <a href="/tabelasgdd"> Tabela com as disciplinas para o ensino fundamental </a> </p>
     </div>
-  </div>
+  </div>--!>
 </div>
 <%- /* Expose locals as `window.SAILS_LOCALS` :: */ exposeLocalsToBrowser() %>
