--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -40,3 +40,4 @@
 @import 'pages/sgddedu/editor.less';
 @import 'pages/paginadeperfil.less';
 @import 'pages/turmas.less';
+@import 'pages/sendgame.less';
